--- a/Elearn/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Elearn/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,36 +6,42 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
-   
-    <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-        <h4>Create a new user.</h4>
-        <hr />
-        <div asp-validation-summary="All" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="Input.Email"></label>
-            <input asp-for="Input.Email" class="form-control" />
-            <span asp-validation-for="Input.Email" class="text-danger"></span>
+<form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+    <h4>Create a new user.</h4>
+    <hr />
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-group">
+        <label asp-for="Input.Email"></label>
+        <input asp-for="Input.Email" class="form-control" />
+        <span asp-validation-for="Input.Email" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Input.Password"></label>
+        <input asp-for="Input.Password" class="form-control" />
+        <span asp-validation-for="Input.Password" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Input.ConfirmPassword"></label>
+        <input asp-for="Input.ConfirmPassword" class="form-control" />
+        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Input.HEX"></label>
+        <input asp-for="Input.HEX" class="form-control" />
+        <span asp-validation-for="Input.HEX" class="text-danger"></span>
+    </div>
+    <div class="row">
+        <div class="col-6">
+            <button type="submit" class="btn btn-block btn-primary">Register</button>
         </div>
-        <div class="form-group">
-            <label asp-for="Input.Password"></label>
-            <input asp-for="Input.Password" class="form-control" />
-            <span asp-validation-for="Input.Password" class="text-danger"></span>
+        <div class="col-6">
+            <button type="button" onclick="location.href = '/User'" class="btn btn-block btn-secondary">Go back</button>
         </div>
-        <div class="form-group">
-            <label asp-for="Input.ConfirmPassword"></label>
-            <input asp-for="Input.ConfirmPassword" class="form-control" />
-            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Input.HEX"></label>
-            <input asp-for="Input.HEX" class="form-control" />
-            <span asp-validation-for="Input.HEX" class="text-danger"></span>
-        </div>
-        <button type="submit" class="btn btn-primary">Register</button>
-    </form>
+    </div>
+  
+</form>
 
-</div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
