--- a/Elearn/Views/Shared/_Layout.cshtml
+++ b/Elearn/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Users">Users</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Units">Units</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Unit" asp-action="Index">Units</a>
                         </li>
                     </ul>
                 </div>
