--- a/Elearn/Views/User/Index.cshtml
+++ b/Elearn/Views/User/Index.cshtml
@@ -8,9 +8,10 @@
 <h1>@ViewData["Title"]</h1>
 <p>Use this page to create, edit or delete users.</p>
 
-<button class="btn btn-primary" onclick="location.href = '/Identity/Account/Register'">Create User</button>
+    <button class="btn btn-primary" onclick="location.href = '/Identity/Account/Register'">Create User</button>
+    <hr />
 <div class="container">
-    <table class="table">
+    <table class="table table-responsive-lg">
         <thead>
             <tr>
                 <th scope="col">Email</th>
