--- a/Elearn/Views/Unit/Index.cshtml
+++ b/Elearn/Views/Unit/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>@ViewData["Title"]</h1>
 <p>Use this page to create, edit or delete units.</p>
 
-    <button class="btn btn-primary" onclick="location.href = '/Unit/Create'">Create Unit</button>
+    <button class="btn btn-primary" onclick="location.href = '/Unit/Form'">Create Unit</button>
     <hr />
 <div class="container">
     <table class="table table-responsive-lg">
