--- a/Elearn/Views/Unit/Form.cshtml
+++ b/Elearn/Views/Unit/Form.cshtml
@@ -2,6 +2,32 @@
     ViewData["Title"] = "Unit form";
 }
 
-<form>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="~/js/units.js"></script>
 
-</form>
+<h1>@ViewData["Title"]</h1>
+<h3 id="state"></h3>
+
+
+<section id="section">
+    <div class="form-group">
+        <label>Name</label>
+        <input type="text" class="form-control" />
+
+    </div>
+    <div class="form-group">
+        <label>Description</label>
+        <textarea class="form-control"></textarea>
+    </div>
+    <div class="form-group">
+        <label>User</label>
+        <select id="unitUserSelect" class="form-control">
+        </select>
+    </div>
+    <div class="form-group">
+        <button class="btn btn-primary" onclick="SaveUnit(this.parentNode.parentNode)" id="unitCreateButton"></button>
+    </div>
+
+</section>
+
