--- a/Elearn/Views/Report/UserReport.cshtml
+++ b/Elearn/Views/Report/UserReport.cshtml
@@ -20,9 +20,6 @@
   <tbody>
 @for(int i=0;i < Model.Count; i++)
 {
-    
-
-
     string Mark = Model[i].Result.SingleOrDefault() != null ?
     Model[i].Result.SingleOrDefault().Mark.ToString() : "-1" ;
 
@@ -54,8 +51,8 @@
       }
       else
       {
-        <div class="progress" style="height: 30px;"> 
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="@Mark" aria-valuemin="0" aria-valuemax="100" style="width: @MarkPercent">@MarkPercent</div>
+        <div class="progress"> 
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="@Mark" aria-valuemin="0" aria-valuemax="100" style="width: @MarkPercent"><strong>@MarkPercent</strong></div>
         </div>
       }
         
