--- a/Elearn/Views/Shared/_Layout.cshtml
+++ b/Elearn/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Unit" asp-action="Index">Units</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Test" asp-action="Index">Tests</a>
+                        </li>
                     </ul>
                 </div>
             </div>
