--- a/Elearn/Views/Test/Create.cshtml
+++ b/Elearn/Views/Test/Create.cshtml
@@ -11,12 +11,32 @@
 <h1>@ViewData["Title"]</h1>
 <p>Use this page to create test.</p>
 <hr />
-<button class="btn btn-primary" onclick="createQuestion()">Add question</button>
-<div class="container" id="editor">
-  
+<div class="form-group">
+    <label>Test name</label>
+    <input id="testName" type="text" class="form-control" />
 </div>
-<hr/>
-<button class="btn btn-primary" onclick="createTest()">Create Test</button>
+<div class="form-group">
+    <label>Duration (minutes)</label>
+    <input id="duration" type="number" min="0" step="1" class="form-control" />
+</div>
+<div class="form-group">
+    <label>Categories</label>
+    <select class="form-control" id="testCategories"></select>
+</div>
+
+<div class="form-group">
+    <button class="btn btn-primary" onclick="createQuestion()">Add question</button>
+</div>
+
+
+<div class="container" id="editor">
+
+</div>
+
+<hr />
+<div class="form-group">
+    <button class="btn btn-primary" onclick="createTest()">Create Test</button>
+</div>
 
 
 
