--- a/Elearn/Views/User/Index.cshtml
+++ b/Elearn/Views/User/Index.cshtml
@@ -8,9 +8,47 @@
 <h1>@ViewData["Title"]</h1>
 <p>Use this page to create, edit or delete users.</p>
 
-    <button class="btn btn-primary" onclick="location.href = '/Identity/Account/Register'">Create User</button>
-    <hr />
+<button class="btn btn-primary" onclick="location.href = '/Identity/Account/Register'">Create User</button>
+<button type="button" class="btn btn-primary" onclick="OpenModal()">
+    Create category
+</button>
+<hr />
 <div class="container">
+
+    <div class="modal fade" id="unitCategoryModal" tabindex="-1" role="dialog" aria-labelledby="unitCategoryModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="unitCategoryModalLabel"></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <input type="text" id="categoryInput" placeholder="Write category name..." class="form-control" />
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" onclick="createUnitCategory()">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <h4>Categories</h4>
+    <table class="table table-responsive-lg">
+        <thead>
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody id="unitCategoriesTBody">
+        </tbody>
+    </table>
+    <br />
+    <h4>Users</h4>
     <table class="table table-responsive-lg">
         <thead>
             <tr>
