--- a/Elearn/Views/Assign/AssignedTests.cshtml
+++ b/Elearn/Views/Assign/AssignedTests.cshtml
@@ -26,7 +26,7 @@
       {
         if(Model[i].Result.SingleOrDefault().Mark >= 0)
         {
-          <text>Model[i].Result.SingleOrDefault().Mark</text>
+          <text>@Model[i].Result.SingleOrDefault().Mark</text>
         }
         else if(Model[i].Result.SingleOrDefault().Mark == -1)
         {
