--- a/Elearn/Views/Home/Index.cshtml
+++ b/Elearn/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>If you want to use Elearn please contact <a href="mailto: pockeviciuspovilas@gmail.com">developers</a>!</p>
 </div>
