--- a/Elearn/Views/Report/CategoryReport.cshtml
+++ b/Elearn/Views/Report/CategoryReport.cshtml
@@ -2,17 +2,17 @@
 
 @{
     Layout = "~/Views/Report/Shared/_Layout.cshtml";
-    ViewData["Title"] = "Mano testai";
+    ViewData["Title"] = "My tests";
     
 }
-<h2> Kategorijos ataskaita</h2>
+<h2> Category report</h2>
 <table class="table table-hover">
   <thead>
     <tr>
-      <th scope="col">Testo pavadinimas</th>
-      <th scope="col">Užduota</th>
-      <th scope="col">Spręsta</th>
-      <th scope="col">Pažymių vidurkis</th>
+      <th scope="col">Test name</th>
+      <th scope="col">Assignees count</th>
+      <th scope="col">Solved count</th>
+      <th scope="col">Mark average</th>
     </tr>
   </thead>
   <tbody>
