--- a/Elearn/Views/User/Index.cshtml
+++ b/Elearn/Views/User/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>@ViewData["Title"]</h1>
 <p>Use this page to create, edit or delete users.</p>
 
-<button class="btn btn-primary" onclick="location.href = '/Identity/Account/Register'">Create User</button>
+<button class="btn btn-primary" onclick="CreateUser()">Create User</button>
 <button type="button" class="btn btn-primary" onclick="OpenModal()">
     Create category
 </button>
