--- a/Elearn/Views/Assign/AssignedTests.cshtml
+++ b/Elearn/Views/Assign/AssignedTests.cshtml
@@ -44,7 +44,7 @@
 
 
     </td>
-    <td><input type="button" value="Delete" onclick="location.href='@Url.Action("Delete", "Assign")?id=@Model[i].Id'" /></td>
+    <td><input type="button" class="btn btn-outline-danger" value="Delete" onclick="location.href='@Url.Action("Delete", "Assign")?id=@Model[i].Id'" /></td>
     </tr>
   } 
   <tbody>
