Test update function

--- a/Elearn/Views/Test/Create.cshtml
+++ b/Elearn/Views/Test/Create.cshtml
@@ -35,7 +35,7 @@
 
 <hr />
 <div class="form-group">
-    <button class="btn btn-primary" onclick="createTest()">Create Test</button>
+    <button class="btn btn-primary" id="saveBtn" onclick="createTest()">Create Test</button>
 </div>
 
 
