--- a/Elearn/Views/Home/Index.cshtml
+++ b/Elearn/Views/Home/Index.cshtml
@@ -12,8 +12,8 @@
 @if (User.Identity.IsAuthenticated)
 {
     <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-        <p>Use navigation bar to make changes!</p>
+        <h1 class="display-4">Welcome to Elearn testing platform</h1>
+        <p>Site is currently under development</p>
     </div>
 }
 
